--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     height: 100vh;
     padding: 20px;
     overflow: hidden;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .menu:hover{
@@ -43,7 +43,7 @@ ul{
 }
 
 ul li a{
-    display: block;
+    /* display: block; */
     text-decoration: none;
     padding: 10px;
     margin: 10px 0;
